`gtk_[column,grid,list]_view_scroll_to()` with `GTK_LIST_SCROLL_FOCUS` fails if window not active.
Intro
Their documentation boldly states:
This function works no matter if the gridview is shown or focused. If it isn’t, then the changes will take effect once that happens.
Except it don't take effect at all if the GtkRoot window is not active (i.e. doesn't have global focus)...
Steps to reproduce
- Use nautilus with the
gtk_[column,grid]_view_scroll_to()
patches applied (nautilus!1292 (merged) if not yet merged, otherwisemain
). - Use the CtrlS shortcut open a dialog.
- Use that dialog to select files using glob patterns.
(Implementation in nautilus uses gtk_[column,grid]_view_scroll_to()
to focus and scroll to the selected files).
Current behavior
When the dialog closes, the selected file is not focused.
Expected outcome
Selected file receives the global input focus when the dialog is closed.
Version information
Additional information
Same bug is exibited with the previewer (sushi), which allows to use the arrow keys to move around the view while the previewer window is focused.